update datebase access

--- a/config.ini
+++ b/config.ini
@@ -9,10 +9,10 @@ bypass                  = index
 
 [db]
 engine  = mysql
-host    = localhost
-user    = root
+host    = 3.83.124.77
+user    = netune
 dbname  = netune
-pass    = 
+pass    = @Netune1
 
 [template]
 directory = app/tpl
